# mps_benchmark

./: README.md  pyproject.toml
benchmark/: __init__.py  algorithm2.py  predicates.py  random_channels.py
benchmark/experiments/: __init__.py  lcl_formulas.py  model_catalog.py  scale_benchmark.py
scripts/: list_lcl_formulas.py  list_models.py  run_scale_benchmark.py
