[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mps-benchmark"
version = "0.1.0"
description = "MPS benchmark framework for Algorithm 2 and LCL experiments"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy"]

[tool.setuptools.packages.find]
include = ["benchmark*"]
